--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^7.0.0
   flutter_downloader: ^1.6.1
   flutter_full_pdf_viewer: ^1.0.6
+  flutter_launcher_icons: ^0.9.3
   flutter_local_notifications: ^5.0.0+4
   flutter_spinkit: ^5.0.0
   flutter_staggered_grid_view: ^0.4.0
