--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,13 @@ dependencies:
   transparent_image: ^2.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.2"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/logo_proyek.png"
+
   flutter_test:
     sdk: flutter
 
